force-app/main/default/objects/Contact/fields/School__c.field-meta.xml
<CustomField>
    <fullName>School__c</fullName>
    <inlineHelpText>This field is a mapped field with Lead and will be automatically filled during Lead conversion process if the data is filled there. Fields values will be updated based on the mapped objects (Lead-Account) (Lead-Contact)</inlineHelpText>
    <label>School</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>