force-app/main/default/objects/Contact/fields/Source_Description__c.field-meta.xml
<CustomField>
    <fullName>Source_Description__c</fullName>
    <description>how this contact is derived and originally input into our system</description>
    <inlineHelpText>Details about how this contact is derived and originally input into our system</inlineHelpText>
    <label>Source Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>