force-app/main/default/objects/Contact/fields/Source_of_Wealth__c.field-meta.xml
<CustomField>
    <fullName>Source_of_Wealth__c</fullName>
    <inlineHelpText>Source of a contact wealth</inlineHelpText>
    <label>Source of Wealth</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Real estate</fullName>
            </value>
            <value>
                <fullName>Crypto</fullName>
            </value>
            <value>
                <fullName>Inherited</fullName>
            </value>
            <value>
                <fullName>Finance-Investments</fullName>
            </value>
            <value>
                <fullName>Mining</fullName>
            </value>
            <value>
                <fullName>Natural Resources</fullName>
            </value>
            <value>
                <fullName>Hospitality</fullName>
            </value>
            <value>
                <fullName>Founder-Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>