force-app/main/default/objects/Contact/fields/Speaker__c.field-meta.xml
<CustomField>
    <fullName>Speaker__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This field is a mapped field with Lead and will be automatically filled during Lead conversion process if the data is filled there. Fields values will be updated based on the mapped objects (Lead-Account) (Lead-Contact)</inlineHelpText>
    <label>Speaker</label>
    <type>Checkbox</type>
</CustomField>