force-app/main/default/objects/Contact/fields/TikTok__c.field-meta.xml
<CustomField>
    <fullName>TikTok__c</fullName>
    <inlineHelpText>Contact&apos;s TikTok Account details will appear in this field</inlineHelpText>
    <label>Tik Tok</label>
    <length>80</length>
    <type>Text</type>
</CustomField>