force-app/main/default/objects/Contact/fields/TotalHeightInInches__c.field-meta.xml
<CustomField>
    <fullName>TotalHeightInInches__c</fullName>
    <formula>(VALUE(TEXT(HeightInFeet__c))*12)+(VALUE(TEXT(Inches__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>What is the contact&apos;s total height in inches. This field automatically updates after calculating the height in feet and + height in inches</inlineHelpText>
    <label>Total Height (In Inches)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>