force-app/main/default/objects/Contact/fields/TwitterHandle__c.field-meta.xml
<CustomField>
    <fullName>TwitterHandle__c</fullName>
    <inlineHelpText>The URL to the contact&apos;s Twitter will appear here</inlineHelpText>
    <label>Twitter Handle</label>
    <length>80</length>
    <type>Text</type>
</CustomField>