force-app/main/default/objects/Contact/fields/Unaffiliated_Position__c.field-meta.xml
<CustomField>
    <fullName>Unaffiliated_Position__c</fullName>
    <inlineHelpText>Select One or Multiple Values for Unaffiliated Position from the following list.</inlineHelpText>
    <label>Unaffiliated Position</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Actor</fullName>
            </value>
            <value>
                <fullName>Advisor</fullName>
            </value>
            <value>
                <fullName>Advocate</fullName>
            </value>
            <value>
                <fullName>Artist</fullName>
            </value>
            <value>
                <fullName>Athlete</fullName>
            </value>
            <value>
                <fullName>Author</fullName>
            </value>
            <value>
                <fullName>Bitcoin Core Engineer</fullName>
            </value>
            <value>
                <fullName>Bitcoin Developer</fullName>
            </value>
            <value>
                <fullName>Bitcoin Historian</fullName>
            </value>
            <value>
                <fullName>Blogger / Twitter Personality</fullName>
            </value>
            <value>
                <fullName>Celebrity</fullName>
            </value>
            <value>
                <fullName>CEO</fullName>
            </value>
            <value>
                <fullName>CFA</fullName>
            </value>
            <value>
                <fullName>Comedian</fullName>
            </value>
            <value>
                <fullName>Community Leader</fullName>
            </value>
            <value>
                <fullName>Computer scientist</fullName>
            </value>
            <value>
                <fullName>Creator</fullName>
            </value>
            <value>
                <fullName>Data Scientist</fullName>
            </value>
            <value>
                <fullName>Digital Artist</fullName>
            </value>
            <value>
                <fullName>Economist</fullName>
            </value>
            <value>
                <fullName>Editor</fullName>
            </value>
            <value>
                <fullName>Educator</fullName>
            </value>
            <value>
                <fullName>Entrepreneur</fullName>
            </value>
            <value>
                <fullName>Filmmaker</fullName>
            </value>
            <value>
                <fullName>Futurist</fullName>
            </value>
            <value>
                <fullName>Host</fullName>
            </value>
            <value>
                <fullName>Inventor</fullName>
            </value>
            <value>
                <fullName>Investor (could become account?)</fullName>
            </value>
            <value>
                <fullName>Marine Corps</fullName>
            </value>
            <value>
                <fullName>Musician</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>