force-app/main/default/objects/Contact/fields/WealthXRecord__c.field-meta.xml
<CustomField>
    <fullName>WealthXRecord__c</fullName>
    <formula>IF( ISBLANK(WXIntegration__Wealth_X_Dossier_Id__c),&apos;&apos;,HYPERLINK(&quot;https://steelperlot--preprod--wxintegration.visualforce.com/apex/Wealth_X_SearchedDossier?dossier=&quot; &amp; TEXT(WXIntegration__Wealth_X_Dossier_Id__c), &quot;Wealth-X Record Detail Page&quot;, &quot;_blank&quot;))</formula>
    <label>Associated WealthX Dossier</label>
    <type>Text</type>
</CustomField>