force-app/main/default/objects/Contact/fields/WeightInPounds__c.field-meta.xml
<CustomField>
    <fullName>WeightInPounds__c</fullName>
    <inlineHelpText>What is the Contact&apos;s weight in Pounds : 1 Kilo = 2.2 Pounds</inlineHelpText>
    <label>Weight In Pounds</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>