force-app/main/default/objects/Contact/fields/WikipediaPage__c.field-meta.xml
<CustomField>
    <fullName>WikipediaPage__c</fullName>
    <inlineHelpText>Enter the URL of the Wikipedia page of this contact.</inlineHelpText>
    <label>Wikipedia Page</label>
    <type>Url</type>
</CustomField>