force-app/main/default/objects/Contact/fields/WXIntegration__Created_by_Wealth_X__c.field-meta.xml
<CustomField>
    <fullName>WXIntegration__Created_by_Wealth_X__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to identify the Contacts(converted from Leads) created by Wealth-X data.</description>
    <inlineHelpText>Tick this box if this contact has been created via WealthX</inlineHelpText>
    <label>Created by Wealth-X</label>
    <type>Checkbox</type>
</CustomField>