force-app/main/default/objects/Contact/fields/WXIntegration__UHNW__c.field-meta.xml
<CustomField>
    <fullName>WXIntegration__UHNW__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Wealth-X UHNW</label>
    <type>Checkbox</type>
</CustomField>