force-app/main/default/objects/Contact/fields/WXIntegration__Wealth_X_Action__c.field-meta.xml
<CustomField>
    <fullName>WXIntegration__Wealth_X_Action__c</fullName>
    <formula>IF( ISBLANK( WXIntegration__Wealth_X_Dossier_Id__c ) , HYPERLINK(&quot;/apex/WXIntegration__WXSalesforceAssociate?firstName=&quot;+ FirstName +&quot;&amp;lastName=&quot; + LastName + &quot;&amp;companyName=&quot; + Account.Name + &quot;&amp;sfRecordId=&quot; + Id , IMAGE(&quot;/resource/WXIntegration__wx_resources/images/wx-associate.png&quot;, &quot;Associate&quot;,25,25),&quot;_self&quot;) , HYPERLINK(&quot;/apex/WXIntegration__WXDissociate?sfRecordId=&quot;+Id ,  IMAGE(&quot;/resource/WXIntegration__wx_resources/images/wx-dissociate.png&quot;, &quot;Dissociate&quot;,25,25),&quot;_self&quot;))</formula>
    <label>Wealth-X Actions</label>
    <type>Text</type>
</CustomField>