force-app/main/default/objects/Contact/fields/WXIntegration__Wealth_X_Detail_Dossier__c.field-meta.xml
<CustomField>
    <fullName>WXIntegration__Wealth_X_Detail_Dossier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Wealth-X Detail Dossier</label>
    <referenceTo>WXIntegration__WealthXDetailDossier__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts_del</relationshipName>
    <type>Lookup</type>
</CustomField>