force-app/main/default/objects/Contact/fields/WXIntegration__Wealth_X_Dossier__c.field-meta.xml
<CustomField>
    <fullName>WXIntegration__Wealth_X_Dossier__c</fullName>
    <formula>IF (WXIntegration__Wealth_X_Dossier_Id__c &lt;&gt; 0, 
HYPERLINK(&quot;/apex/WXIntegration__Wealth_X_SearchedDossier?associateSFID=&quot; &amp; Id &amp; &quot;&amp;associateSFObject=Contact&amp;dossier=&quot; &amp; TEXT(WXIntegration__Wealth_X_Dossier_Id__c), IMAGE(&quot;/servlet/servlet.FileDownload?file=&quot;&amp;WXIntegration__Wealth_X_DossierDocumentId__c, &quot;Dossier&quot;,25, 25)), 
NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Wealth-X Dossier</label>
    <type>Text</type>
</CustomField>