force-app/main/default/objects/Contact/fields/WXIntegration__Wealth_X_Dossier_Id__c.field-meta.xml
<CustomField>
    <fullName>WXIntegration__Wealth_X_Dossier_Id__c</fullName>
    <label>Wealth-X Dossier Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>