force-app/main/default/objects/Contact/fields/WXIntegration__Wealth_X_Dossier_Request__c.field-meta.xml
<CustomField>
    <fullName>WXIntegration__Wealth_X_Dossier_Request__c</fullName>
    <formula>if((WXIntegration__Wealth_X_Dossier_Id__c &gt; 0),HYPERLINK(&apos;/apex/WXIntegration__WealthXRequestUpdate?dossierId=&apos;+TEXT(WXIntegration__Wealth_X_Dossier_Id__c)+&apos;&amp;dossierName=&apos;+WXIntegration__Wealth_X_Detail_Dossier__r.WXIntegration__firstName__c+&apos; &apos;+WXIntegration__Wealth_X_Detail_Dossier__r.WXIntegration__lastName__c+&apos;&amp;requestType=old&amp;associatedId=&apos;+Id + &apos;&amp;associatedObject=Contact&amp;hasAccessToAtleastOneRec=Yes&apos;,&quot;Refresh/Build Dossier&quot;), HYPERLINK(&apos;/apex/WXIntegration__WealthXCreateRequest?requestType=new&amp;associatedId=&apos;+ CASESAFEID(Id) +&apos;&amp;associatedObject=Contact&amp;dossierName=&apos;+FirstName+&apos; &apos;+LastName+&apos;&amp;company=&apos;+Account.Name+&apos;&amp;location=&apos;+ MailingCity+&apos;, &apos;+MailingState+&apos;, &apos;+MailingCountry +&apos;&amp;hasAccessToAtleastOneRec=Yes&apos;, &quot;Request a New Dossier&quot;) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Wealth-X Dossier Request</label>
    <type>Text</type>
</CustomField>