force-app/main/default/objects/Contact/fields/WXIntegration__Wealth_X_DossierDocumentId__c.field-meta.xml
<CustomField>
    <fullName>WXIntegration__Wealth_X_DossierDocumentId__c</fullName>
    <label>Wealth-X DossierDocumentId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>