force-app/main/default/objects/Contact/fields/YearOfBirth__c.field-meta.xml
<CustomField>
    <fullName>YearOfBirth__c</fullName>
    <inlineHelpText>In which year was the Contact born</inlineHelpText>
    <label>Year Of Birth</label>
    <length>4</length>
    <type>Text</type>
</CustomField>