force-app/main/default/objects/Contact/fields/Years_Of_Experience__c.field-meta.xml
<CustomField>
    <fullName>Years_Of_Experience__c</fullName>
    <inlineHelpText>This field is a mapped field with Lead and will be automatically filled during Lead conversion process if the data is filled there. Fields values will be updated based on the mapped objects (Lead-Account) (Lead-Contact)</inlineHelpText>
    <label>Years Of Experience</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>