force-app/main/default/objects/Contact/fields/Youtube__c.field-meta.xml
<CustomField>
    <fullName>Youtube__c</fullName>
    <inlineHelpText>The URL to the Contact&apos;s the Contact Youtube channel will appear here</inlineHelpText>
    <label>Youtube</label>
    <length>80</length>
    <type>Text</type>
</CustomField>