force-app/main/default/objects/Contact/fields/ZodiacSign_delete__c.field-meta.xml
<CustomField>
    <fullName>ZodiacSign_delete__c</fullName>
    <inlineHelpText>What is the Contact&apos;s Zodiac Sign based on the Contact&apos;s Date of Birth. This field is not on the page layout</inlineHelpText>
    <label>Zodiac</label>
    <length>25</length>
    <type>Text</type>
</CustomField>