force-app/main/default/objects/Contact/validationRules/If_Political_Affiliation_is_Others.validationRule-meta.xml
<ValidationRule>
    <fullName>If_Political_Affiliation_is_Others</fullName>
    <active>true</active>
    <description>For the Political Affiliation field, if the user selects Others as a value and not enters information under &apos;Other Political Affiliation&apos; Field. The record will not get created</description>
    <errorConditionFormula>ISPICKVAL( PoliticalAffiliation__c , &apos;Other&apos;) &amp;&amp;  ISBLANK( OtherPoliticalAffiliation__c)</errorConditionFormula>
    <errorMessage>Please fill in the Details of Other Political Affiliation you are connected with.</errorMessage>
</ValidationRule>