force-app/main/default/objects/Contact/validationRules/If_Unaffiliated_Position_is_Others.validationRule-meta.xml
<ValidationRule>
    <fullName>If_Unaffiliated_Position_is_Others</fullName>
    <active>true</active>
    <errorConditionFormula>INCLUDES(  Unaffiliated_Position__c , &apos;Others&apos;) &amp;&amp; ISBLANK(  Other_Unaffiliated_Positions__c )</errorConditionFormula>
    <errorDisplayField>Other_Unaffiliated_Positions__c</errorDisplayField>
    <errorMessage>Please fill in the Details of Other Unaffiliated Positions you are connected with.</errorMessage>
</ValidationRule>