force-app/main/default/objects/Contact/validationRules/Twitter_Handle.validationRule-meta.xml
<ValidationRule>
    <fullName>Twitter_Handle</fullName>
    <active>true</active>
    <errorConditionFormula>TwitterHandle__c != NULL &amp;&amp; (LEFT(TwitterHandle__c, 1)) != &apos;@&apos;</errorConditionFormula>
    <errorDisplayField>TwitterHandle__c</errorDisplayField>
    <errorMessage>User must enter a valid Twitter Handle field that should meet the standards of using @ in the beginning</errorMessage>
</ValidationRule>